tests/error/comptime/trivially_copy_values4.bz
// error: invalid call to '__builtin_trivially_copy_values'
// note: while evaluating expression at compile time
// note: destination and source ranges overlap
// note: destination and source addresses point into this stack object with offsets of 8 and 0, and a total range size of 12
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut a = [10: i32]();

		__builtin_trivially_copy_values(a.begin() + 2, a.begin(), 3);
	});
}
